customizations/istio/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitor
spec:
  hosts:
    - grafana.lirvanalabs.dev
  gateways:
    - asm-ingress/asm-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prometheus-stack-grafana
            port:
              number: 80
      timeout: 300s
